--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,16 @@
 <resources>
     <string name="app_name">武松打钱</string>
-    <string name="examination">首页</string>
-    <string name="exercise">参考</string>
-    <string name="mistakes">理财</string>
+    <string name="home">首页</string>
+    <string name="reference">参考</string>
+    <string name="money">理财</string>
     <string name="user">我的</string>
+    <string name="login">登录</string>
+    <string name="mobile_login">/手机快捷登录</string>
+    <string name="input_mobile">请输入手机号</string>
+    <string name="input_code">请输入验证码</string>
+    <string name="obtain_code">获取验证码</string>
+    <string name="login_password">账号密码登录</string>
+    <string name="registered">注册</string>
+    <string name="login_bottom_title">点击注册即表示同意</string>
+    <string name="login_bottom_agreement">《卡秘书用户协议免责条款》</string>
 </resources>
